# otto8-tools

./: .dockerignore  .gitignore  Dockerfile  Makefile  index.yaml  requirements.txt
anthropic-bedrock-model-provider/: main.py  requirements.txt  tool.gpt  validate.py
anthropic-model-provider/: main.py  requirements.txt  setup.py  tool.gpt  validate.py
anthropic-model-provider-go/: go.mod  go.sum  main.go  tool.gpt
auth-providers-common/: go.mod  go.sum
azure-openai-model-provider/: helpers.py  main.py  tool.gpt  validate.py
basic-auth/: main.go  tool.gpt
bluesky/: package-lock.json  package.json  tool.gpt  validate-cred.gpt
browser/: package-lock.json  package.json  tool.gpt
colly-scraper/: go.mod  go.sum  main.go  tool.gpt
credential-stores/: go.mod  go.sum
database/: go.mod  go.sum  main.go  tool.gpt  ui.gpt
deepseek-model-provider/: go.mod  main.go  tool.gpt
die-roller/: go.mod  go.sum  main.go  tool.gpt
discord/: bot.py  main.py  package-lock.json  package.json  tool.gpt  tsconfig.json  validate-cred.gpt
docker/: go.mod  go.sum  main.go  tool.gpt  volumes.sh
docker-shell-id/: tool.gpt
docs/: auth-providers.md
excel/: go.mod  tool.gpt
existing-credential/: tool.gpt
file-summarizer/: file_reader.py  helper.py  load_text.py  main.py  requirements.txt  summarize.py  tool.gpt
firecrawl/: Makefile  go.mod  main.go  tool.gpt
gemini/: image-generator.gpt  main.py  requirements.txt
gemini-vertex-model-provider/: go.mod  go.sum  main.go  tool.gpt
generic-credential/: go.mod  main.go  tool.gpt
generic-openai-model-provider/: go.mod  main.go  tool.gpt
github/: index.js  package-lock.json  tool.gpt  validate-cred.gpt
github-auth-provider/: go.mod  go.sum  main.go  tool.gpt
gitlab/: go.mod  main.go  tool.gpt
google-auth-provider/: go.mod  go.sum  main.go  tool.gpt
google/calendar/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  tool.gpt
google/calendar/app/: server.py
google/calendar/app/tools/: event.py  helper.py
google/calendar/credential/: tool.gpt
google/calendar/tests/: test_server.py
google/calendar/tools/: calendar.py  event.py  helper.py
google/drive/: README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  tool.gpt
google/drive/apis/: files.py  helper.py  permissions.py  shared_drives.py  workspace_file.py
google/drive/app/: server.py
google/drive/app/apis/: files.py  helper.py  permissions.py  shared_drives.py  workspace_file.py
google/drive/commands/: __init__.py  copy_file.py  create_file.py  create_folder.py  create_permission.py  create_shared_drive.py  delete_file.py  delete_permission.py  delete_shared_drive.py  download_file.py  get_file.py  get_permission.py  list_files.py  list_permissions.py  list_shared_drives.py  transfer_ownership.py  update_file.py  update_permission.py  update_shared_drive.py
google/drive/tests/: test_server.py
google/gmail/: Dockerfile  README.md  createDraft.py  currentEmail.py  deleteDraft.py  deleteEmail.py  docker-compose.yml  downloadAttachment.py  example_client.py  getAttachment.py  helpers.py  listAttachments.py  listDrafts.py  listInbox.py  list_emails.py  main.py  pyproject.toml  pytest.ini  readEmail.py  requirements.txt  sendDraft.py  sendEmail.py  server.py  tool.gpt  updateDraft.py
google/gmail/apis/: drafts.py  helpers.py  labels.py  messages.py
google/gmail/commands/: __init__.py  create_label.py  delete_label.py  list_drafts.py  list_emails.py  list_labels.py  modify_message_labels.py  update_label.py
google/gmail/obot_gmail_mcp/: server.py
google/gmail/obot_gmail_mcp/apis/: drafts.py  helpers.py  labels.py  messages.py
google/gmail/tests/: test_server.py
google/sheets/: appendCellsToSpreadsheet.py  auth.py  createSpreadsheet.py  docker-compose.yml  pyproject.toml  querySpreadsheet.py  readSpreadsheet.py  readTablesFromSpreadsheet.py  requirements.txt  tool.gpt  updateCellInSpreadsheet.py  updateCellsInSpreadsheet.py  update_cells.py  update_with_formula.py
google/sheets/app/: helper.py  server.py
groq-model-provider/: go.mod  main.go  tool.gpt
images/: package-lock.json  package.json  tool.gpt
knowledge/: Makefile  README.md  delete-file.gpt  delete.gpt  file-loader.gpt  go.mod  go.sum  ingest.gpt  load.gpt  main.go  tool.gpt
knowledge-mcp/: .gitignore  Dockerfile  README.md  demo.ipynb  docker-compose-with-oauth-proxy.yml  docker-compose.yml  example_client.py  pyproject.toml  test.ipynb
knowledge-mcp/app/: __init__.py  config.py  db_schema.py  embeddings.py  main.py  raw_db.py  text_processing.py  vector_db.py
linkedin/: main.py  requirements.txt  tool.gpt
linkedin-publishing/: requirements.txt  tool.gpt
loop-data/: go.mod  go.sum  main.go  tool.gpt
mcp-aws-ec2-server/: pyproject.toml
mcp-aws-ec2-server/src/mcp_aws_ec2_server/: __init__.py  __main__.py  aws_service.py  main.py
mcp-aws-ec2-server/tests/: test_aws_service.py
mcp-die-roller-server/: pyproject.toml
mcp-die-roller-server/src/mcp_die_roller_server/: __init__.py  __main__.py  main.py
mcp-die-roller-server/tests/: test_main.py
memory/: go.mod  go.sum  main.go  tool.gpt
meta-defender-provider/: filehandler.go  go.mod  main.go  tool.gpt  validate.go
microsoft365/outlook-mcp/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
microsoft365/outlook-mcp/app/: __init__.py  client.py  global_config.py  graph.py  group_mcp.py  main.py  utils.py
notion/: context.gpt  tool.gpt
oauth2/: go.mod  go.sum  main.go  tool.gpt
obot-search/: tool.gpt
ollama-model-provider/: go.mod  main.go  tool.gpt
openai-model-provider/: go.mod  go.sum  main.go  tool.gpt
pagerduty/: index.js  package-lock.json  package.json  tool.gpt
placeholder-credential/: main.py  requirements.txt  tool.gpt
postgres/: go.mod  go.sum  main.go  tool.gpt  validate-cred.gpt
projects/: tool.gpt
proxycurl/: main.py  tool.gpt
result-formatter/: go.mod  main.go
salesforce/: tool.gpt
scripts/: package-providers.sh  package-tools.sh
search-combo/: answer.gpt  go.mod  go.sum  main.go  tool.gpt
(+598 files in other folders)
