[project]
name = "knowledge-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastmcp>=2.9.2",
    "greenlet>=3.2.3",
    "pgvector>=0.4.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "notebook>=7.4.4",
]
