[project]
name = "mcp-aws-ec2-server"
version = "0.1.0"
description = "AWS EC2 MCP Server"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.8.1",
  "boto3>=1.38.40"
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "moto[ec2]>=5.1.6"
]

[project.scripts]
mcp-aws-ec2-server = "mcp_aws_ec2_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
