[project]
name = "mcp-die-roller-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
  "fastmcp",
  "pydiceroll"
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0"
]

[project.scripts]
mcp-die-roller-server = "mcp_die_roller_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
